# TallyTools

./: LICENSE.txt  README.md  pyproject.toml  setup.py
TallyTools/: __init__.py  checkers.py  operations.py  to_int.py  to_tally.py
TallyTools.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_funcs.py
